--- a/src/patternfly/components/Banner/themes/dark/banner.scss
+++ b/src/patternfly/components/Banner/themes/dark/banner.scss
@@ -2,17 +2,13 @@
 
 @mixin pf-v5-theme-dark-banner() {
   .#{$banner} {
-    &.pf-m-info,
     &.pf-m-blue,
-    &.pf-m-danger,
     &.pf-m-red,
-    &.pf-m-success,
     &.pf-m-green,
-    &.pf-m-warning,
     &.pf-m-gold {
-      color: var(--#{$pf-global}--palette--black-900);
+      --#{$banner}--Color: var(--#{$pf-global}--palette--black-900);
     }
 
-    @include pf-v5-theme-dark--t-dark;
+    @include pf-v5-theme-dark--t-dark(false);
   }
 }
