--- a/src/patternfly/components/MenuToggle/menu-toggle.scss
+++ b/src/patternfly/components/MenuToggle/menu-toggle.scss
@@ -120,7 +120,7 @@
 
   // Split button, child
   --#{$menu-toggle}--m-split-button--child--BackgroundColor: var(--#{$pf-global}--BackgroundColor--100);
-  --#{$menu-toggle}--m-split-button--child--disabled--Color: var(--#{$pf-global}--Color--dark-200);
+  --#{$menu-toggle}--m-split-button--child--disabled--Color: var(--#{$pf-global}--disabled-color--100);
   --#{$menu-toggle}--m-split-button--child--disabled--BackgroundColor: var(--#{$pf-global}--disabled-color--300);
   --#{$menu-toggle}--m-split-button--first-child--PaddingRight: var(--#{$pf-global}--spacer--sm);
   --#{$menu-toggle}--m-split-button--last-child--PaddingLeft: 0;
@@ -363,6 +363,7 @@
       --#{$menu-toggle}--PaddingRight: 0;
       --#{$check}__input--MarginTop: 0;
       --#{$check}__label--Color: currentcolor;
+      --#{$check}__label--disabled--Color: currentcolor;
 
       align-items: center;
       align-self: stretch;
@@ -469,8 +470,6 @@
     // disable accent border
     &.pf-m-disabled,
     &:disabled {
-      --#{$menu-toggle}--m-split-button--child--BackgroundColor: var(--#{$menu-toggle}--m-split-button--child--disabled--BackgroundColor);
-      --#{$menu-toggle}--m-split-button--child--Color: var(--#{$menu-toggle}--m-split-button--child--disabled--Color);
       --#{$menu-toggle}--m-split-button--m-action--child--BorderLeftColor: transparent;
 
       &::before,
