--- a/src/patternfly/patternfly-base-no-globals-theme-dark-unversioned.scss
+++ b/src/patternfly/patternfly-base-no-globals-theme-dark-unversioned.scss
@@ -3,6 +3,9 @@
 // $pf-global--theme-dark--placeholder--class in _init.scss
 $pf-v5-global--enable-reset: false;
 $pf-v5-global--enable-normalize: false;
+
+// stylelint-disable scss/dollar-variable-pattern
 $pf-global--theme--version: '';
+// stylelint-enable
 
 @import "./patternfly-base";
