--- a/src/patternfly/patternfly-base-theme-dark-unversioned.scss
+++ b/src/patternfly/patternfly-base-theme-dark-unversioned.scss
@@ -2,7 +2,4 @@
 $pf-global--theme--version: '';
 // stylelint-enable
 
-// Version
-@import "patternfly";
-
-// stylelint enable
+@import "./patternfly-base";
