chore(global): remove specificity from root selector

--- a/src/patternfly/themes/dark/_patternfly-charts-theme-dark.scss
+++ b/src/patternfly/themes/dark/_patternfly-charts-theme-dark.scss
@@ -8,7 +8,7 @@
     }
   }
 
-  @at-root :root#{&} {
+  & {
     // colors
     --#{$chart}-color-blue-100: #{$pf-v5-chart-color-blue-100};
     --#{$chart}-color-blue-200: #{$pf-v5-chart-color-blue-200};
